feat: implement mssql and mysql database import functionality
- Add MySQL and MSSQL driver support
- Implement database connection testing
- Add database feature detection
- Update documentation for database setup
- Configure database connection utilities
- Remove deprecated MariaDB driver
- Final update before UI and architecture migration